--- a/docs/experiences/english/grammar/learn-b2.mdx
+++ b/docs/experiences/english/grammar/learn-b2.mdx
@@ -109,7 +109,7 @@ some / four / ten / several / a / an / very
 ```
 2. صفات بیان کننده ارزش یا `value`
 ```text
-nice / beautiful / delicious / lovely / silly / powerful / awful / wonderful / enormous / thoughtful / interesting
+nice / beautiful / delicious / lovely / silly / powerful / awful / wonderful / enormous / thoughtful / interesting / ugly
 ```
 3. صفات بیان کننده اندازه یا `size`
 ```text
@@ -174,9 +174,10 @@ How long will he have lived in Germany by the next month ?
 (او تا ماه بعد چند سال است که در آلمان زندگی کرده است؟)
 He'll have lived in Germany for 13 years by the next month.
 ---------------------------------------------------------------------------------
-Will you have finished the report by the deadline?
+Will you have finished the report by the deadline ?
 Why will she have finished the cleaning by six ?
-How long will you have been in this company when you retire?
+How long will you have been in this company when you retire ?
+Where will he and his family have gone by next month ?
 ```
 🎉 در زمان آینده کامل، برای تمامی ضمائر فقط از `have` استفاده می کنیم و مانند زمان حال کامل از `have / has` استفاده نمی کنیم.
 
@@ -222,3 +223,574 @@ Should I have known?
 Could he have arrived?
 Must they have bought a car?
 ```
+
+## جمله واره های اسمی (Noun clauses)
+جمله ای که در دل جمله دیگر، نقش اسم می گیرد
+```text
+I know Ali.
+I know where he lives.
+```
+روش تبدیل سوالات `yes/no question` به جمله واره های اسمی:
+
+**اگر جمله پرسشی بود**
+
+1. با فعل کمکی `do` شروع شود:
+
+حذف `do` و قرار دادن `if / whether` به جای آن
+```text
+Do they study English ?
+Can you tell me if they study English ?
+Can you tell me whether they study English ?
+ممکن است به من بگویی که آیا آن ها انگلیسی می خوانند ؟
+```
+2. با فعل کمکی `does` شروع شود:
+
+حذف `does` و قرار دادن `if / whether` به جای آن
+
+باز گرداندن `s` یا `es` فعل
+```text
+Does he work here ?
+I don't know if he works here.
+I don't know whether he works here.
+من نمی دانم که آیا او اینجا کار می کند.
+```
+3. با فعل کمکی `did` شروع شود:
+
+حذف `did` و قرار دادن `if / whether` به جای آن
+
+استفاده از شکل گذشته فعل
+```text
+Did she watch TV ?
+I have no idea if she watched TV.
+I have no idea whether she watched TV.
+من نمی دانم که آیا او تلویزیون نگاه کرد.
+-----------------------------------------------------------------------------------
+Tom didn't say whether he was planning to go or not.
+```
+4. با فعل `to be` شروع شود:
+
+اضافه کردن `if / whether` به ابندای جمله
+
+جابه جا کردن فعل `to be` و فاعل
+```text
+Is she a teacher ?
+I'm not sure if she is a teacher.
+I'm not sure whether she is a teacher.
+من مطمئن نیستم که آیا او یک معلم است.
+```
+روش تبدیل سوالات `wh` دار به جمله وار های اسمی:
+
+همانند روش سوالات `yes / no question` باید عمل کنیم.
+
+نیازی به اضافه کردن `if / whether` نیست.
+```text
+Where do you work ?
+Can you tell me where you work ? => ممکن است به من بگویی کجا کار می کنی؟
+-----------------------------------------------------------------------------------
+How does she come here ?
+I don't know how she comes here. => من نمی دانم او چگونه به اینجا می آید
+-----------------------------------------------------------------------------------
+What did she buy yesterday ?
+I have no idea what she bought yesterday. => من نمی دانم او دیروز چه چیزهایی خرید
+-----------------------------------------------------------------------------------
+Where is your house ?
+Can you tell me where your house is ? => ممکن است به من بگویی خانه ات کجاست ؟
+-----------------------------------------------------------------------------------
+What are you doing ?
+I want to know what they are doing. => من میخواهم بدانم آن ها در حال انجام چه کاری هستند
+-----------------------------------------------------------------------------------
+Where have you been ?
+I'm curious where you have been. => من کنجکاوم شما کجا بوده اید
+-----------------------------------------------------------------------------------
+Whose socks are those ?
+I don't know whose socks those are.
+-----------------------------------------------------------------------------------
+Tom didn't know the reason why Mary was crying.
+Have you told everyone when and where the meeting will be ?
+Tom had no idea where Mary had graduated from high school.
+My friend doesn't know how well his brother plays football.
+```
+🎉 باید حواسمان باشد ک جمله واره ها سوالی نیستند، پس هنگام استفاده باید ب جایگاه فعل و فاعل دقت شود و قسمت دوم جمله را ب صورت سوالی ک اول فعل است ننویسیم.
+
+🎉 در `wh` دار ها باید در جمله واره ها فعل را در انتها استفاده کرد
+
+## حروف اضافه (Prepositions)
+انواع حرف های اضافه پر کاربرد:
+#### without
+به معنای `بدونِ`
+```text
+I bought a house without a yard.
+He lives without his parents.
+```
+#### outside
+به معنای `بیرونِ`
+```text
+The restroom is outside of the mosque.
+```
+#### inside
+به معنای `درونِ`
+```text
+The keys are inside of my packet.
+The rumours are coming from inside the company.
+```
+#### against
+به معنای `در مقابلِ` و `برخلافِ`
+```text
+It's against the law.
+Are you against internet censorship ?
+```
+#### from
+به معنای `از`
+```text
+It's a gift from your mother.
+Try to keep from shaking.
+```
+#### during
+به معنای `در طولِ` و `در حینِ`
+```text
+My father was killed during the war.
+The teacher said no talking during class.
+```
+#### for
+به معنای `برایِ`
+
+بیانگر طول مدت دوره
+```text
+I've een there for 2 years.
+Could you mail this letter for me ?
+```
+#### since
+به معنای `از`
+
+بیانگر آغاز دوره
+```text
+She has lived here since 2010.
+I haven't been on holiday since last July.
+```
+#### ago
+به معنای `قبل`
+```text
+They went to Tehran 4 years ago.
+```
+#### till / until
+به معنای `تا`
+
+بیانگر انتها
+```text
+I work from Saturday till Wednesday.
+We played chess until midnight.
+```
+#### by
+به معنای `به وسیله` یا `با`
+```text
+He went to school by bus.
+The damage was caused by the storm.
+```
+#### through
+به معنای `از طریقهِ` یا `از میانِ`
+```text
+Learn English through an amazing application.
+The burglar got in through the window.
+```
+#### towards
+به معنای `به سمتِ`
+```text
+Go 5 steps towards the house.
+She had her back towards me.
+```
+
+## حال کامل استمراری (Present perfect continuous)
+برای بیان کاری که از گذشته شروع شده و تاکنون ادامه دارد.
+
+#### ساختار زمان حال کامل
+
+`ing + فعل + have / has + been + فاعل`
+```text
+She has been talking on the phone for 3 hours.
+They have been living there since 2010.
+I have been looking for a job since October. => من از ماه اکتبر تا حالا دنبال کار می گردم
+```
+قید های زمان حال کامل استمراری:
+
+قید `for` => برای بیان طول دوره
+
+قید `since` => برای بیان ابتدای زمان
+
+**روش منفی کردن**
+
+با قرار دادن `not` بعد از `have / has`
+
+**روش سوالی کردن**
+
+با جابه جایی فاعل و `have / has`
+```text
+I've not been living here for years. => من سال هاست که اینجا زندگی نکرده ام
+Has she been waiting here long ?
+Have been watching TV since 12 hours ago ?
+How long has she been playing ? چه مدت است که او در حال بازی کردن است ؟
+Where have you been watching the game ?
+What have you been doing since 2 days ago ? => از 2 روز گذشته در حال انجام چه کاری هستی ؟
+You look dirty. What have you been doing all day ?
+He has been writing his essay all day, but he hasn't finished yet.
+How long have you known Ali ?
+```
+🎉 بعضی افعال مانند افعالی ک حس را نشان میدهند، حالت استمراری ( با `ing` ) ندارند. مانند `know, angry, etc`
+
+🎉 در اکثر جملات حال کامل استمراری، زمان و یا طول دوره مشخص است.
+
+## نقل قول 3 (Reported speech 3)
+تغییرات زمان افعال در نقل قول غیرمستقیم:
+
+حال ساده ------> گذشته ساده
+
+حال استمراری ------> گذشته استمراری
+
+حال کامل ------> گذشته کامل
+
+حال کامل استمراری ------> گذشته کامل استمراری
+
+گذشته ساده ------> گذشته کامل
+
+گذشته استمراری ------> گذشته کامل استمراری
+
+گذشته کامل ------> گذشته کامل (بدون تغییر)
+
+ساختار `is going to` ------> ساختار `was going to`
+
+🎉 در نقل قول مستقیم برخی ضمائر نیازمند تغییر هستند.
+```text
+He said, "I love you."
+He said that he loved her.
+-----------------------------------------------------------------------------------
+She said, "I'm talking on the phone."
+She said that she was talking on the phone.
+-----------------------------------------------------------------------------------
+He told them, "The rain has stopped."
+He told them that the rain had stopped.
+-----------------------------------------------------------------------------------
+He said, "I've been reading for 3 hours."
+He said that he had been reading for 3 hours.
+-----------------------------------------------------------------------------------
+He told me, "I met him in the theatre."
+He told me he had met him in the theatre.
+-----------------------------------------------------------------------------------
+He told the police, "I was driving carefully."
+He told the police that he had been driving carefully.
+-----------------------------------------------------------------------------------
+He said, "I'm going to be a dentist."
+He said that he was going to be a dentist.
+```
+
+## نقل قول 4 (Reported speech 4)
+تغییر افعال مدال در نقل قول غیرمستقیم:
+
+فعل مدال `will` ------> فعل مدال `would`
+
+فعل مدال `shall` ------> فعل مدال `should`
+
+فعل مدال `must` ------> فعل مدال `had to`
+
+فعل مدال `can` ------> فعل مدال `could`
+
+فعل مدال `may` ------> فعل مدال `might`
+
+**تغییرات زمان ها و مکان ها در نقل قول غیرمستقیم**
+
+`now` ------> `then`
+
+`tonight` ------> `that night`
+
+`yesterday` ------> `the day before`
+
+`tomorrow` ------> `the following day / the next day`
+
+`this morning` ------> `that morning`
+
+`last week` ------> `the previous week`
+
+`next Saturday` ------> `the following Saturday`
+
+`here` ------> `there`
+
+`this` ------> `that`
+
+`these` ------> `those`
+
+`ago` ------> `before / previously`
+
+`today` ------> `that day`
+
+```text
+He told me, "I'll see you tomorrow."
+He told me he would see me the next day.
+-----------------------------------------------------------------------------
+She said, "I saw her today."
+She said she had seen her that day.
+-----------------------------------------------------------------------------
+She said, "I'll see Sara on Sunday."
+She said that she would see Sara the following Sunday.
+-----------------------------------------------------------------------------
+He said, "I met her about three months ago."
+He said that he had met her about three months before.
+-----------------------------------------------------------------------------
+He said, "I must go out to post a letter."
+He said that he had to go out to post a letter.
+-----------------------------------------------------------------------------
+She told me, "I really like this furniture."
+She told me that she really liked that furniture.
+-----------------------------------------------------------------------------
+He said to me, "I can see you tomorrow."
+He said to me that he could see me the following day.
+```
+
+## نقل قول 5 (Reported speech 5)
+**روش ساخت نقل قول در جملات سوالی**
+
+در حالت کلی باید تمام تغییرات افعال، ضمائر و قید ها همانند جملات خبری اعمال شود ب اضافه موارد زیر:
+
+#### در جملات سوالی `wh` دار
+
+1. بازگرداندن جای فاعل و فعل
+2. حذف `does`، `did` و `do`
+```text
+She asked, "Why didn't you tell me the truth ?"
+She asked me why I hadn't told her the truth.
+--------------------------------------------------------------------------------------
+He asked, "What are you writing now ?" => او پرسید: الان در حال نوشتن چه چیزی هستی ؟
+He asked me what I was writing then. => او از من پرسید: در آن زمان چه می نویسم
+--------------------------------------------------------------------------------------
+He asked, "When do you want to change this furniture ?"
+He asked me when I wanted to change that furniture.
+--------------------------------------------------------------------------------------
+He asked, "When do you want to change this ?"
+He asked me when I wanted to change that.
+--------------------------------------------------------------------------------------
+She asked, "Where do you think we should advertise ?"
+She asked me where I thought they should advertise.
+```
+#### در جملات سوالی `yes/no question`
+
+1. بازگرداندن جای فاعل و فعل
+2. حذف `does`، `did` و `do`
+3. قرار دادن `if` یا `whether` قبل از فاعل
+```text
+He asked, "Are you angry ?"
+He asked me whether I was angry.
+--------------------------------------------------------------------------------------
+He asked, "Have I seen you before ?" => او از من پرسید: آیا من قبلا تو را دیده ام ؟
+He asked if he had seen me before.  => او از من پرسید: آیا قبلا مرا دیده است؟
+--------------------------------------------------------------------------------------
+She asked, "Did you see this film ?"
+She asked me whether I had seen that film.
+--------------------------------------------------------------------------------------
+She asked, "Did you go there yesterday ?"
+She asked me if I had gone there the day before.
+```
+🎉 در نقل قول جملات سوالی از فعل `ask` ب جای `say` و `tell` استفاده می شود( و ساختار جملات مانند جمله وار های اسمی می باشد. ).
+
+## نقل قول 6 (Reported speech 6)
+**روش ساخت نقل قول در جملات امری**
+
+باید فعل امر را به مصدر با `to` تبدیل کنیم
+
+همچنین باید از افعال `commmand` ، `order` ، `tell` ، `say` استفاده کنیم.
+```text
+He said, "Close the window."
+He said to close the window.
+----------------------------------------------------------
+She ordered, "Clean my car." => او دستور داد: ماشینم را تمیز کن
+She ordered me to clean her car. => او به من دستور داد که ماشینش را تمیز کنم
+```
+🎉 در نقل قول جملات امری منفی، قبل از مصدر با `to` از `not` استفاده می کنیم.
+```text
+He told me, "Don't go there."
+He told me not to go there.
+----------------------------------------------------------
+"Don't put your clothes here," he said. =>او گفت: لباس هایت را اینجا نگذار
+He said not to put my clothes there. => او گفت که لباس هایم را اینجا نگذارم
+```
+**روش ساخت نقل قول در جملات درخواستی و پیشنهادی**
+
+استفاده از مصدر با `to` بجای فعل جمله و کوتاه کردن آن
+```text
+She asked, "CAn you help me write my speech ?"
+She asked me to help her write her speech.
+-----------------------------------------------------------------------
+He asked, "Would you please bring me some tea ?" => او درخواست کرد: آیا ممکن است برایم مقداری چای بیاوری ؟
+He asked me to bring him some tea. => او از من درخواست کرد که برایش مقداری چای بیاورم
+-----------------------------------------------------------------------
+He said, "I'll help you type up that report if you like."
+He offered me to help me type up the report.
+-----------------------------------------------------------------------
+"Please help me carry this," she asked.
+She asked me to help her carry that.
+-----------------------------------------------------------------------
+She asked, "Could you please open the window ?"
+She asked me to open the window.
+-----------------------------------------------------------------------
+She asked, "Would you mind lending me a pencil ?"
+She asked me to lend her a pencil.
+-----------------------------------------------------------------------
+"I was wondering if you could possibly tell me the time ?" she asked.
+She asked me to tell her the time.
+```
+
+## صحبت در مورد عادات گذشته (Past habits)
+از `used to` و `would` برای صحبت در مورد عادت گذشته استفاده می شود.
+```text
+When we were children, my brother and I used to fight all the time.
+
+When we were children, my brother and I would fight all the time.
+```
+🎉 اصولا بعد از `used to` فعل به صورت شکل ساده می آید.
+
+🎉 هنگام استفاده از `would`، ارجاع به زمان گذشته ضروری است.
+```text
+Before I got this job, I used to go out a lot. ✔
+Before I got this job, I would go out a lot. ✔
+
+I used to go out a lot. ✔
+I would go out a lot. ✖
+```
+اما برای `used to` می توان بدون ارجاع ب زمان گذشته هم آن را نوشت.
+### انواع فعل در زبان انگلیسی
+1. **افعال کنشی**
+
+بیان کننده عمل یا کار هستند.
+```text
+eat / walk / learn / sleep
+```
+2. **افعال حالتی**
+
+بیان کننده حالت هستند.
+```text
+love / hate / know / live
+```
+🎉 هنگام استفاده از `would`، فقط از **افعال کنشی** می توانیم استفاده کنیم.
+```text
+She used to have a long hair.
+She would have a long hair. ✖
+
+My dad would always read to me before bed.
+When they came to London, they would never travel anywhere on the tube.
+```
+اما از `used to` می توان برای هر 2 نوع فعل استفاده کرد.
+
+🎉 هنگام استفاده از `did`، حرف `d` فعل `used to` حذف می شود.
+```text
+I didn't use to work there.
+He didn't use to play soccer.
+
+Did you use to smoke ?
+Did he use to sleep late ?
+----------------------------------------------
+He's not the same man he used to be.
+Tom certainly doesn't have the money he used to.
+Tom doesn't have a pet now, but he used to have a dog.
+```
+
+## ضمائر موصولی who, which, that (Relative pronouns)
+**ضمیر موصولی**
+
+1. یک جمله وصفی را به اسم قبل از خودش وصل می کند.
+2. دو جمله را تبدیل به یک جمله می کند.
+
+### ضمیر موصولی who
+برای توصیف **انسان** به کار می رود.
+```text
+The man works here. He is my father.
+The man who works here is my father.
+-----------------------------------------------------------------------------------------------------
+The teacher teaches Math. He lives downtown. => آن معلم ریاضی درس می دهد. او در مرکز شهر زندگی می کند
+The teacher who teaches Math lives downtown. => معلمی که ریاضی درس می دهد در مرکز شهر زندگی می کند
+```
+### ضمیر موصولی which
+برای توصیف **اشیا** به کار می رود.
+```text
+This is the book. It is very useful for me.
+This is the book which is very useful for me.
+-----------------------------------------------------------------------------------------------------
+I bought a car. It was broken. => من یک ماشین خریدم. آن خراب بود
+The car which I bought was broken. => ماشینی که من خریدم خراب بود
+-----------------------------------------------------------------------------------------------------
+The meal was delicious. Sara cooked it.
+The meal which Sara cooked was delicious.
+-----------------------------------------------------------------------------------------------------
+This is the lion. It has been ill recently.
+This is the lion which has been ill recently.
+```
+### ضمیر موصولی that
+برای توصیف **انسان و اشیا** به کار می رود.
+```text
+The boy is from Iran. You saw him yesterday.
+The boy that you saw yesterday is from Iran.
+-----------------------------------------------------------------------------------------------------
+The book is mine. It is on the table.
+The book that is on the table is mine.
+-----------------------------------------------------------------------------------------------------
+We threw out the computer. It never worked properly.
+We threw out the computer that never worked properly.
+-----------------------------------------------------------------------------------------------------
+The man was badly injured. He was driving the car.
+The man that was badly injured was driving the car.
+```
+🎉 باید حواسمان باشد ک بعد از ضمائر موصولی، نباید ضمیر اسمی ک در جمله اصلی است را دوباره بیاوریم، یعنی بعد از ضمائر موصولی، فعل قرار می گیرد و خود آن ضمائر موصولی کار ضمیر اصلی را انجام می دهند.
+
+## حروف ربط ( Conjunctions) 2
+**حروف ربط `دوتایی`**
+
+1. شامل 2 حرف ربط هستند.
+2. در یک جمله در جای متفاوت قرار می گیرند.
+
+### حروف ربط either و or
+```text
+I want either cheesecake or the chocolate cake.
+من یا کیک پنیر یا کیک شکلاتی می خواهم
+------------------------------------------------------------------------
+Either you go there, or I will take you there.
+یا خودت به آنجا می روی یا من تورا به آنجا خواهم برد
+```
+🎉 از شکل " `یا` این `یا` اون " استفاده می کند.
+### حروف ربط both و and
+```text
+We'll have both the cheesecake and the chocolate cake.
+ما هم کیک پنیر و هم کیک شکلاتی می خوریم
+------------------------------------------------------------------------
+She has got both the pc and the laptop.
+او هم کامپیوتر رومیزی و هم لپتاپ دارد
+```
+🎉 از شکل " `هم` این `هم` اون " استفاده می کند.
+### حروف ربط whether و or
+```text
+I didn't know whether you'd want the cheesecake or the chocolate cake, so I got both.
+من نمی دانستم که تو کیک پنیر یا کیک شکلاتی می خواهی، در نتیجه هر 2 را گرفتم.
+------------------------------------------------------------------------
+Whether they let us in or they don't, we should go inside.
+چه آن ها اجازه بدهند داخل بشویم و چه اجازه ندهند ما باید داخل شویم
+```
+🎉 از شکل " `چه` این `چه` اون " استفاده می کند.
+### حروف ربط neither و nor
+```text
+You want neither the cheesecake nor the chocolate cake ?
+تو نه کیک پنیر می خواهی و نه کیک شکلاتی ؟
+------------------------------------------------------------------------
+She speaks neither French nor German.
+او نه فرانسوی و نه آلمانی صحبت نمی کند
+```
+🎉 از شکل " `نه` این `نه` اون " استفاده می کند.
+
+🎉 اگر فعل کمکی منفی در جمله باشد از ساختار `either`و `or` استفاده می کنیم و دقیقا همین معنی را می دهد.
+### حروف ربط not only و but also
+```text
+I'll eat them both - not only the cheesecake but also the chocolate cake.
+من هر دوی آن ها را خواهم خورد. نه تنها کیک پنیر بلکه کیک شکلاتی هم خواهم خورد.
+------------------------------------------------------------------------
+Not only they taught good courses but also their prices were reasonable.
+آن ها نه تنها دوره های خوبی تدریس می کردند بلکه قیمت شان هم معقول بود
+```
+🎉 از شکل " `نه تنها` این `بلکه` اون هم " استفاده می کند.
+
+## گذشته کامل استمراری (Past perfect continuous)
+
+
+
