--- a/docs/experiences/react-native/react-native-tags.mdx
+++ b/docs/experiences/react-native/react-native-tags.mdx
@@ -216,3 +216,6 @@ export default function App() {
         />
       </View>
 ```
+
+🎉 سعی شود از استایل های کپسوله شده استفاده شود، یعنی مواردی ک می دانیم در خیلی جاها استفاده می شود را در یکجا قرار دهیم و
+از آن در همه جا استفاده کنیم، یعنی از قانون `DRY` استفاده کنیم.
