--- a/docs/experiences/react-native/react-native1.mdx
+++ b/docs/experiences/react-native/react-native1.mdx
@@ -20,17 +20,11 @@ expo init first-project
 🎉 در `React Native` در واقع `flex` به صورت پیش فرض تمام عرض و ارتفاع باقی مانده را به خود اختصاص می دهد و می توان درون آن دوباره از `flex` برای فرزندان نیز استفاده کرد:
 
 ```jsx
-    return (
     <View style={{flex :1 }}>
-
         <View style={{flex :1, backgroundColor: '#FF5722'}} />
-
         <View style={{flex :2, backgroundColor: '#673AB7'}} />
-
         <View style={{flex :3, backgroundColor: '#FFEB3B'}} />
-
     </View>
-    );
 ```
 
 🎉 برای اینکه یک تابع را در یک `useState` استفاده کنیم و چون مرسوم است که `useState` در ابتدای بدنه `function` تعریف شود، باید تابع مورد نظر را در خارج از بدنه تابع اصلی تعریف کنیم:
@@ -42,21 +36,28 @@ expo init first-project
     const minutesToMillis = (min) => min * 1000 * 60;
 
     export const Countdown = ({ minutes = 20, isPaused }) => {
-
     const [millies, setMillies] = useState(minutesToMillis(minutes))
-
     return (
-        <View>
-            <Text>{millies}</Text>
-        </View>
-    );
-};
+        <View><Text>{millies}</Text></View>
+    );};
  ```
 
 🎉 از دستور زیر می توان برای `reset` کردن `metro` استفاده کنیم:
 ```shell
 npx react-native start --reset-cache
 ```
+
+🎉 برای استفاده از قابلیت عمودی و افقی برنامه `expo go` باید در فایل `app.json`، بخش `orientation` را تغییر دهیم:
+```json
+{
+  "expo": {
+    "orientation": "default"
+    }
+}
+```
+که 3 حالت دارد :`portrait`، `landscape` و `default` ک ما ب صورت بالا می نویسیم ک یعنی بر اساس تنظیمات گوشی باشد و برنامه را یکبار باید `reload` کنیم.
+
+🎉 بهتر است ک فولدر `asstes` و `components` را درون یک فولدر ب نام `app` قرار دهیم و در فایل `app.json` آدرس موارد استفاده شده از `assets` را درست کنیم تا ساختار فایل ها بهتر شود.
 ## debugging
 🎉 برای اینکه وارد حالت `developer tools` شویم، در `emulator` باید دکمه های `ctrl + m` را بزنیم و روی موبایل شخصی در `expo` باید گوشی را تکان دهیم و سپس گزینه `debug remote JS` را می زنیم
 
@@ -80,4 +81,3 @@ npx react-native start --reset-cache
 2. حال وارد ترمینال ادیتورمان می شویم و از همانجا وارد اکانت `expo` خودمان می شویم و یا اگر اکانتی نداریم، همانجا می توان ساخت و یا وارد سایت خود `expo` شد و یک اکانت جدید ساخت
 
 3. حال صبر میکنیم تا پروسه ساخت تمام شود و سپس با استفاده از لینکی ک `expo` در اختیارمان می گذارد، نرم افزار خودمان را ب اشتراک بگذاریم.
-
